fix(notification-center): make notifications are visible in small widths

--- a/app/components/notification-center/styles.scss
+++ b/app/components/notification-center/styles.scss
@@ -1,6 +1,7 @@
 & {
   position: absolute;
   width: 30%;
+  min-width: 320px;
   top: 100px;
   right: 0;
   z-index: 10000;
